# zml

./: .gitignore  CLAUDE.md  PRESENTATION_PLAN.md  README.md  athena.conf.example  cluster.conf  cluster.conf.example  cogvideo_script.py  evaluate_baseline_fire.py  generate_data.py  generate_with_baseline.py  generate_with_finetunned.py  interactive.sh  pull_from_athena.sh  pull_results.sh  pull_weights.sh  push_weights.sh  pyproject.toml  requirements.txt  scriptor.py  setup_for_helios.sh  submit.py  submit_job.py  submit_to_athena.py  submit_to_athena.sh  test_inference.slurm  unlearn_model.py  unlearn_model_preserve.py  unlearn_quick_inspect.py  unlearn_with_precomputed_latents.py  watch_athena_jobs.sh  watch_jobs.sh
athena_slurms/: assess_on_vbench.sh  assess_on_vbench.slurm  check_baseline_for_fire.sh  check_for_nudity.sh  check_for_nudity.slurm  evaluate_baseline_fire.sh  generate_baseline_with_seeds.sh  generate_finetuned_with_seeds.sh  generate_with_baseline.sh  generate_with_finetunned.sh  generate_with_finetunned.slurm  unlearn_model.sh  unlearn_quick_inspect.sh  unlearn_with_precomputed_latents.sh  unlearn_with_precomputed_latents_search.sh  unlearn_with_precomputed_latents_search_2b.sh  unlearn_with_weighted_step_sampling.sh
benchmarks/: check_for_fire.py
docs/: frame_replace.md  partial_fire_search.md  unhype.md  unhype_video_attempts.md
experiments/exp001_esd_fire_lora8/: config.yaml
legacy/: requirements.txt  scriptor.py  submit_all.sh  tuned_gen_cog.sh  unlearn_model.py
prompts/: cogvideox_fire.csv  cogvideox_fire_100.csv  cogvideox_fire_anchor.csv  cogvideox_fire_control_anchor.txt  cogvideox_fire_control_fire.csv  cogvideox_fire_control_fire.txt  cogvideox_fire_control_related.csv  cogvideox_fire_control_related.txt  cogvideox_fire_control_unrelated.csv  cogvideox_fire_control_unrelated.txt  cogvideox_fire_oneword.csv  cogvideox_fire_preservation.csv  cogvideox_fire_unhype.csv  cogvideox_fire_unhype_short.csv  cogvideox_nudity.csv  cogvideox_partial_fire.csv  cogvideox_partial_fire_curated.csv  part_fire_prompts.txt
scripts/: eval.py  precompute.py  search.py  test_wandb.py  unlearn.py
slurm/: athena.sh  eval.sh  helios.sh  helios_eval.sh  helios_unlearn.sh  precompute.sh  unlearn.sh
tools/: build_esd_table.py  build_frame_replace_table.py  build_results_table.py  build_unhype_table.py  merge_partial_fire_prompts.py
zml/: utils.py
zml/eval/: clip_score.py  (+6 more)
(+108 files in other folders)
