[project]
name = "zml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.90",
    "pandas>=3.0.0",
    "peft>=0.18.1",
    "protobuf>=7.34.1",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.0.0",
    "ultralytics>=8.4.33",
]
