[project]
name = "zml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "huggingface-hub>=1.4.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.90",
    "pandas>=2.0.0",
    "peft>=0.18.1",
    "protobuf>=3.12.0",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.0.0",
    "ultralytics>=8.4.33",
    "mlflow>=2.0.0",
    "wandb>=0.19.0",
#    "dover @ git+https://github.com/QualityAssessment/DOVER.git",
#    "decord>=0.6.0",
]

[tool.uv]
package = true
override-dependencies = [
    "torch>=2.11.0",
]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["zml"]
